manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-task
  namespace: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: add-task
  template:
    metadata:
      labels:
        app: add-task
    spec:
      containers:
      - name: add-task
        image: acrtodoappdev01.azurecr.io/microtodoaddtask:8
        ports:
        - containerPort: 8000
      imagePullSecrets:
        - name: acr-creds
