manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: add-task-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: "/add-task($|/.*|)"
        backend:
          service:
            name: add-task
            port: 
              number: 80
